# apple-fm-serve

./: Makefile  README.md  pyproject.toml  serve
src/apple_fm_serve/: __init__.py  config.py  errors.py  ids.py  main.py  openai_types.py  prompt.py  stream.py  usage.py
src/apple_fm_serve/providers/: __init__.py  apple.py  base.py  mock.py
tests/: test_api.py  test_prompt.py  test_stream.py
